# tiny-track

./: .clang-format  .gitignore  .prettierrc  COMMIT_HISTORY.md  INSTALL.md  LICENSE  Makefile  Makefile.am  README.md  clean.sh  configure.ac  install.sh  test.html
.github/workflows/: sdk-lite-publish.yml  sdk-publish.yml  server.yml  storybook.yml
cli/: Makefile.am
cli/src/: commands.c  commands.h  config.c  config.h  ctx.c  ctx.h  dashboard.c  display.c  display.h  main.c  output.c  output.h  reader.c  reader.h
common/: Makefile.am  config.h  log.h  log_internal.h  metrics.c  metrics.h  ringbuf.h  timer.c  timer.h
common/config/: ini.c  ini.h  paths.c  paths.h  read.c  read.h  reader.c  reader.h
common/log/: core.c  journal.c  stderr.c  syslog.c
common/proto/: v1.h  v2.h
common/ring/: layout.h  reader.c  reader.h  seqlock.h  shm.c  shm.h  writer.c
common/ringbuf/: layout.h  reader.c  reader.h  seqlock.h  shm.c  shm.h  writer.c  writer.h
common/sink/: core.c  journal.c  log.h  log_internal.h  stderr.c  syslog.c
common/utils/: b64.c  b64.h  str.c  str.h  util.c  util.h
demo/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/src/: App.tsx  Footer.tsx  Nav.tsx  components.tsx  main.tsx  responsive.css
docs/: BUILD.md  HACKING.md  INSTALL.md  README.md  TESTING.md  dev-history.md  roadmap.md  specification.md
docs-site/: .env.example  mdx-components.tsx  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
docs-site/app/: globals.css  layout.tsx  page.tsx
docs-site/components/: breadcrumb.tsx  code-block.tsx  code-tabs-client.tsx  code-tabs.tsx  components-page.tsx  docs-layout.tsx  footer.tsx  live-demo.tsx  live-example-client.tsx  live-example.tsx  live-previews-inner.tsx  live-previews.tsx  nav.tsx  (+2 more)
etc/: Makefile.am  tinytrack.conf
etc/systemd/: tinytd.service  tinytrack.service
gateway/: Makefile.am
gateway/src/: b64.c  b64.h  config.c  config.h  event.c  event.h  http.c  http.h  iobuf.c  iobuf.h  main.c  net.c  net.h  printf.c  printf.h  proto.c  proto.h  reader.c  reader.h  server.c  server.h  session.c  session.h  sock.c  sock.h  str.c  str.h  url.c  url.h  util.c  ws.c  ws.h
gateway/tests/: package-lock.json  run_gateway_test.sh  test_gateway.js
gateway/tests/manual-gateway-test/: README.md  index.html  proto.js  script.js
scripts/: bump-sdk-lite.sh  bump-sdk.sh  bump-server.sh  clean.sh  convert_comments.py  suggest-bump.sh
sdk/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
sdk-lite/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
server/: Dockerfile  Makefile.am  README.md  aclocal.m4  bootstrap.sh  config.h.in  configure.ac  docker-compose.yml  docker-entrypoint.sh
server/cli/: Makefile.am
server/cli/src/: commands.c  commands.h  config.c  config.h  ctx.c  ctx.h  dashboard.c  dashboard.h  display.c  main.c  output.c  output.h  reader.c  reader.h
server/common/: Makefile.am  metrics.c  metrics.h  ringbuf.h  sysfs.c  sysfs.h  timer.c  timer.h
server/common/config/: ini.c  ini.h  paths.c  read.c  read.h
server/common/log/: core.c  journal.c  log.h  log_internal.h  stderr.c  syslog.c
server/common/proto/: v1.h  v2.h  v3.h
server/common/ringbuf/: layout.h  reader.c  reader.h  seqlock.h  shm.c  writer.c  writer.h
server/docs/: ARCHITECTURE.md  BUILD.md  CONFIGURATION.md  DOCKER.md  HACKING.md  INSTALL.md  OVERVIEW.md  TESTING.md  TROUBLESHOOTING.md
server/docs/diagrams/: 01-architecture.puml  03-ws-session.puml  04-daemon-internals.puml  05-protocol.puml
server/etc/: Makefile.am  tinytrack.conf  tinytrack.conf-debug  tinytrack.conf-docker
server/etc/certs/: README.md
server/etc/man/: tiny-cli.1  tinytd.8  tinytrack.8
server/etc/systemd/: tinytd.service  tinytrack.service
server/gateway/: Makefile.am
server/gateway/src/: b64.c  config.c  config.h  event.c  event.h  http.c  http.h  iobuf.c  iobuf.h  main.c  net.c  net.h  printf.c  printf.h  proto.c  proto.h  reader.c  reader.h  session.c  session.h  sock.c  sock.h  str.c  tls.c  tls.h  url.c  url.h  util.c  util.h  ws.c  ws.h
server/scripts/: clean.sh  install-extras.sh  setup-test-env.sh
server/scripts/completion/: tiny-cli.zsh
server/tests/: Makefile.am  README.md  run_tests.sh  tinytrack.conf-test
server/tests/bench/: bench_performance.c
server/tests/cli/: test_cli_binary.sh  test_cli_config.c  test_cli_output.c
server/tests/gateway/: conftest.py  package.json  run_gateway_tests.sh  test_auth.py  test_docker_tls.py  test_gateway.js  test_gateway_extended.js  test_http_parser.py  test_load.py  test_sock.py  test_sysinfo.py  test_tls.py  test_ws.py  test_ws_frames.py
server/tests/gateway/manual-test-client/: README.md  index.html  proto.js  script.js
server/tests/sanitize/: run_sanitizers.sh
server/tests/static/: run_static.sh
server/tests/tinytd/: test_config.c  test_metrics.c  test_perf.sh  test_ringbuf.c  test_seqlock.c  test_shadow_sync.c  test_shm.c  test_shm_ipc.c  test_signals.sh  test_smoke.sh
server/tinytd/src/: collector.c  collector.h  config.c  config.h  debug.c  debug.h  main.c  runtime.c  runtime.h  writer.c
src/: b64.c  b64.h  d_service.c  log.c  log.h  m_calc.c  m_calc.h  m_pack.c  m_pack.h  m_state.c  m_state.h  s_event.c  s_event.h  s_http.c  s_http.h  s_iobuf.c  s_iobuf.h  s_net.c  s_net.h  s_printf.c  s_printf.h  s_sock.c  s_sock.h  s_timer.c  s_timer.h  s_url.c  s_url.h  s_ws.c  s_ws.h  str.c  str.h  tiny.c  util.c  util.h
test/: index copy.html  index.html  script.js  serializer.js
tests/: Makefile.am  README.md  bench_performance.c  run_benchmark.sh  run_recovery_test.sh  run_seqlock_test.sh  run_tests.sh  test_recovery.c  test_seqlock.c  tinytd-test.conf  tinytrack.conf-test
tests/gateway/: run_gateway_test.sh  run_gateway_tests.sh  test_gateway.js  test_gateway_extended.js  test_http.py  test_load.py
tests/gateway/manual-gateway-test/: README.md  proto.js
tests/static/: run_static.sh
tests/tinytd/: test_config.c  test_metrics.c  test_signals.sh
tinytd/: Makefile.am
(+205 files in other folders)
